[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apls2"
version = "2.0.0"
description = "Average Path Length Similarity (APLS) - modernized for Python 3.9+"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "geopandas>=0.13",
    "networkx>=3.0",
    "shapely>=2.0",
    "matplotlib>=3.7",
    "rasterio>=1.3,<1.5",
    "pyproj>=3.4,<3.8",
    "rtree>=1.0",
    "tqdm>=4.0",
]

[project.scripts]
apls2 = "apls2.apls:main"

[project.urls]
Homepage = "https://github.com/CosmiQ/apls"
Source = "https://github.com/CosmiQ/apls"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["apls2*"]
